<resources>
    <string name="app_name">Github User</string>
    <string name="search_here">Search Here...</string>
    <string name="please_input_id_name">Please Input ID Name</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="photo_profil">Photo Profil</string>
    <string name="button_search">Button Search</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="created_by_miftahul_ulum">Created By : Miftahul Ulum</string>
    <string name="background_profile">Background Profile</string>
    <string name="Detail_User">Detail User</string>
    <string name="Pengaturan">Pengaturan</string>
    <string name="favorite_User">Favorite User</string>
</resources>