<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <ImageView
        android:id="@+id/background_profile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/background_profile"
        android:background="@drawable/half_rounded"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/bg_search"
        android:elevation="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/button_search"
            android:background="@android:color/transparent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_here"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="1"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_person_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_id_name"
        android:textColor="@color/grey"
        android:fontFamily="@font/nunito_bold"
        tools:ignore="HardcodedText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_view"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>